# Movie_Recommended_System

./: .env  Procfile  README.md  pyproject.toml  requirements.txt
