[project]
name = "movie-recommended-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.66.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
